--- a/optionalPlugins/23andMe-snp-converter/pom.xml
+++ b/optionalPlugins/23andMe-snp-converter/pom.xml
@@ -112,17 +112,43 @@
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <id>build plugin repository</id>
+                        <goals>
+                            <goal>
+                                index
+                            </goal>                       
+                        </goals>
+                        <phase>package</phase>
+                        <configuration>
+                            <obrRepository>${project.build.directory}</obrRepository>    
+                            <mavenRepository>${project.build.directory}</mavenRepository>                      
+                        </configuration>
+                    </execution>
+                </executions>
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Import-Package>*</Import-Package>
                         <Export-Package/>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
-                        <Bundle-Description>Install this to re-format 23andMe reports to BED-detail format for viewing in IGB.</Bundle-Description>
+                        <Bundle-Description>${bundleDescription}</Bundle-Description>                 
                         <Service-Component>*</Service-Component>
                     </instructions>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.lorainelab</groupId>
+                <artifactId>bundle-markdown-encoder</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>encodeMarkdown</goal>
+                        </goals>
+                    </execution> 
+                </executions>
+            </plugin>         
         </plugins>
     </build>
 </project>
