fixed issues with search

--- a/plugins/SearchModeIdOrProps/pom.xml
+++ b/plugins/SearchModeIdOrProps/pom.xml
@@ -25,6 +25,11 @@
             <artifactId>genometry</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <scope>provided</scope>
+        </dependency>
         <!--Start of logging dependencies-->
         <dependency>
             <groupId>org.slf4j</groupId>
