--- a/main/pom.xml
+++ b/main/pom.xml
@@ -590,5 +590,101 @@
                 </plugins>
             </build>
         </profile>
+        <profile> 
+            <id>development-bitbucket-pipelines</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.felix</groupId>
+                        <artifactId>maven-bundle-plugin</artifactId>                
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>
+                                        index
+                                    </goal>                        
+                                </goals>
+                                <phase>package</phase>
+                                <configuration>
+                                    <obrRepository>${project.parent.basedir}/extbundles</obrRepository>     
+                                    <mavenRepository>${project.parent.basedir}/extbundles</mavenRepository>                       
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.install4j</groupId>
+                        <artifactId>install4j-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>install-license</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>install-license</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>compile-installers</id>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>compile</goal>
+                                </goals>
+                                <configuration>
+                                    <projectFile>${session.executionRootDirectory}/distribution/igb_7.install4j</projectFile>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile> 
+            <id>release-bitbucket-pipelines</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.felix</groupId>
+                        <artifactId>maven-bundle-plugin</artifactId>                
+                        <executions>
+                            <execution>
+                                <goals>
+                                    <goal>
+                                        index
+                                    </goal>                        
+                                </goals>
+                                <phase>package</phase>
+                                <configuration>
+                                    <obrRepository>${project.parent.basedir}/extbundles</obrRepository>     
+                                    <mavenRepository>${project.parent.basedir}/extbundles</mavenRepository>                       
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.sonatype.install4j</groupId>
+                        <artifactId>install4j-maven-plugin</artifactId>
+                        <executions>
+                            <execution>
+                                <id>install-license</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>install-license</goal>
+                                </goals>
+                            </execution>
+                            <execution>
+                                <id>compile-installers</id>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>compile</goal>
+                                </goals>
+                                <configuration>
+                                    <projectFile>${session.executionRootDirectory}/distribution/igb_7.install4j</projectFile>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
